src/objects/PerformingRightsFee__c.object
<CustomObject>
    <fields>
        <fullName>Breakout__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Breakout</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CapacityRangeEnd__c</fullName>
        <label>Capacity Range End</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CapacityRangeStart__c</fullName>
        <label>Capacity Range Start</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CapacityRange__c</fullName>
        <formula>IF(CapacityRangeStart__c &lt;&gt; 0,

IF(ABS(CapacityRangeStart__c) &gt;= 1000000, TEXT(FLOOR(ABS(CapacityRangeStart__c) / 1000000)) &amp; &quot;,&quot;, &quot;&quot;) &amp;
IF(ABS(CapacityRangeStart__c) &gt;= 1000, RIGHT(TEXT(FLOOR(ABS(CapacityRangeStart__c) / 1000)), 3) &amp; &quot;,&quot;, &quot;&quot;) &amp;
RIGHT(TEXT(FLOOR(ABS(CapacityRangeStart__c))), 3)

&amp;

IF(CapacityRangeEnd__c = 0, &quot;+&quot;, &quot; - &quot; +

IF(ABS(CapacityRangeEnd__c) &gt;= 1000000, TEXT(FLOOR(ABS(CapacityRangeEnd__c) / 1000000)) &amp; &quot;,&quot;, &quot;&quot;) &amp;
IF(ABS(CapacityRangeEnd__c) &gt;= 1000, RIGHT(TEXT(FLOOR(ABS(CapacityRangeEnd__c) / 1000)), 3) &amp; &quot;,&quot;, &quot;&quot;) &amp;
RIGHT(TEXT(FLOOR(ABS(CapacityRangeEnd__c))), 3)
),

&quot;&quot;)

/* Note this is modified from template below

IF(Amount &lt; 0, &quot;(&quot;, &quot;&quot;) &amp; &quot;$&quot; &amp;
IF(ABS(Amount) &gt;= 1000000, TEXT(FLOOR(ABS(Amount) / 1000000)) &amp; &quot;,&quot;, &quot;&quot;) &amp;
IF(ABS(Amount) &gt;= 1000, RIGHT(TEXT(FLOOR(ABS(Amount) / 1000)), 3) &amp; &quot;,&quot;, &quot;&quot;) &amp;
RIGHT(TEXT(FLOOR(ABS(Amount))), 3) &amp; &quot;.&quot; &amp;
IF(MOD(ABS(Amount) , 1) * 100 &lt; 10, &quot;0&quot; &amp; TEXT(ROUND(MOD(ABS(Amount) , 1), 2) * 100), TEXT(MIN(ROUND(MOD(ABS(Amount) , 1), 2) * 100, 99))) &amp;
IF(Amount &lt; 0, &quot;)&quot;, &quot;&quot;)

*/</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Capacity Range</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Country</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <label>End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ExternalID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GLAccount__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>GL Account</label>
        <referenceTo>GLAccount__c</referenceTo>
        <relationshipLabel>Performing Rights Fees</relationshipLabel>
        <relationshipName>PerformanceRightsFees</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RateAmount__c</fullName>
        <label>Rate/Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RateType__c</fullName>
        <label>Rate Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>% of Net Gross</fullName>
                </value>
                <value>
                    <fullName>Per Drop Count</fullName>
                </value>
                <value>
                    <fullName>Per Paid Ticket</fullName>
                </value>
                <value>
                    <fullName>Flat</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ASCAP</fullName>
                </value>
                <value>
                    <fullName>BMI</fullName>
                </value>
                <value>
                    <fullName>GMR</fullName>
                </value>
                <value>
                    <fullName>SESAC</fullName>
                </value>
                <value>
                    <fullName>SOCAN</fullName>
                </value>
                <value>
                    <fullName>Event Insurance Expense</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Performing Rights Fee</label>
    <nameField>
        <displayFormat>PRF-{000000}</displayFormat>
        <label>Performing Rights Fee ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Performing Rights Fees</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>LNE_DateRange</fullName>
        <active>true</active>
        <description>Start Date can&apos;t greater than End Date if End Date is not blank;
Capacity Range Start can&apos;t be greater than Capacity Range End if Capacity Range End is not blank.</description>
        <errorConditionFormula>OR
(StartDate__c &gt; EndDate__c &amp;&amp; NOT(ISNULL(EndDate__c)),
 CapacityRangeStart__c &gt; CapacityRangeEnd__c &amp;&amp;   
 NOT(ISNULL(CapacityRangeEnd__c)))</errorConditionFormula>
        <errorMessage>Start Date can&apos;t be greater than End Date (if End Date is not blank)
Capacity Range Start can&apos;t be greater than Capacity Range End (if Capacity Range End is not blank)</errorMessage>
    </validationRules>
</CustomObject>